--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    dataBinding{
+        enabled true
+    }
+
+
     buildFeatures {
         viewBinding true
     }
@@ -52,4 +57,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:2.6.1"
+
 }
